eabz.eth-snoop.cfff57f9a4cde08d9abe082c2c25bff4f730283c
Running as unit: run-p1887068-i14467176.scope; invocation ID: 5d70d63b1c6d4ce5b90a1c2e54930db5
   Compiling proc-macro2 v1.0.93
   Compiling unicode-ident v1.0.12
   Compiling serde v1.0.217
   Compiling libc v0.2.169
    Checking cfg-if v1.0.0
   Compiling version_check v0.9.5
   Compiling typenum v1.17.0
    Checking subtle v2.6.1
    Checking const-oid v0.9.6
   Compiling autocfg v1.2.0
   Compiling generic-array v0.14.7
    Checking itoa v1.0.11
   Compiling crunchy v0.2.3
   Compiling cc v1.0.95
   Compiling unicode-xid v0.2.6
   Compiling tiny-keccak v2.0.2
    Checking pin-project-lite v0.2.14
   Compiling paste v1.0.15
   Compiling ruint-macro v1.2.1
   Compiling quote v1.0.36
    Checking allocator-api2 v0.2.21
   Compiling syn v2.0.96
    Checking foldhash v0.1.4
    Checking equivalent v1.0.1
    Checking cpufeatures v0.2.17
    Checking once_cell v1.19.0
    Checking base16ct v0.2.0
   Compiling heck v0.5.0
   Compiling hashbrown v0.15.2
    Checking getrandom v0.2.15
    Checking num_cpus v1.16.0
   Compiling lock_api v0.4.11
    Checking futures-core v0.3.30
    Checking rand_core v0.6.4
    Checking ryu v1.0.17
   Compiling serde_json v1.0.116
   Compiling parking_lot_core v0.9.9
    Checking ff v0.13.0
    Checking group v0.13.0
    Checking scopeguard v1.2.0
    Checking tracing-core v0.1.33
    Checking futures-sink v0.3.30
   Compiling winnow v0.6.24
   Compiling slab v0.4.9
   Compiling indexmap v2.7.0
    Checking mio v0.8.11
    Checking signal-hook-registry v1.4.2
    Checking socket2 v0.5.6
   Compiling proc-macro-error-attr2 v2.0.0
   Compiling dunce v1.0.5
    Checking futures-channel v0.3.30
    Checking memchr v2.7.2
    Checking futures-task v0.3.30
    Checking futures-io v0.3.30
    Checking pin-utils v0.1.0
   Compiling thiserror v2.0.11
   Compiling blst v0.3.13
    Checking byteorder v1.5.0
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.30
    Checking fnv v1.0.7
    Checking threadpool v1.8.1
   Compiling openssl-sys v0.9.104
   Compiling c-kzg v1.0.3
    Checking rustls-pki-types v1.10.1
    Checking tower-service v0.3.3
    Checking tinyvec_macros v0.1.1
   Compiling httparse v1.9.5
    Checking tower-layer v0.3.3
    Checking tinyvec v1.6.0
   Compiling ring v0.17.8
    Checking log v0.4.21
    Checking hex v0.4.3
    Checking percent-encoding v2.3.1
    Checking bitflags v2.5.0
    Checking form_urlencoded v1.2.1
    Checking unicode-bidi v0.3.15
   Compiling openssl v0.10.69
    Checking spin v0.9.8
    Checking futures-utils-wasm v0.1.0
    Checking sync_wrapper v1.0.2
    Checking foreign-types-shared v0.1.1
    Checking unicode-normalization v0.1.23
    Checking untrusted v0.9.0
    Checking foreign-types v0.3.2
    Checking try-lock v0.2.5
   Compiling native-tls v0.2.13
   Compiling rustls v0.23.21
    Checking base64 v0.22.1
    Checking want v0.3.1
   Compiling thiserror v1.0.69
    Checking idna v0.5.0
    Checking openssl-probe v0.1.6
    Checking either v1.13.0
   Compiling rustversion v1.0.19
    Checking itertools v0.13.0
   Compiling num-traits v0.2.18
    Checking url v2.5.0
   Compiling syn-solidity v0.8.19
   Compiling proc-macro-error2 v2.0.1
    Checking data-encoding v2.7.0
    Checking utf-8 v0.7.6
    Checking bimap v0.6.3
    Checking rustls-pemfile v2.2.0
    Checking webpki-roots v0.26.7
   Compiling ahash v0.8.11
   Compiling crossbeam-utils v0.8.21
    Checking mime v0.3.17
    Checking ipnet v2.11.0
   Compiling doctest-file v1.0.0
   Compiling libm v0.2.11
   Compiling winnow v0.5.40
   Compiling serde_derive v1.0.217
   Compiling zeroize_derive v1.4.2
   Compiling derive_more-impl v1.0.0
    Checking zeroize v1.8.1
    Checking der v0.7.9
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking digest v0.10.7
    Checking hmac v0.12.1
    Checking crypto-bigint v0.5.5
    Checking sec1 v0.7.3
    Checking spki v0.7.3
    Checking rfc6979 v0.4.0
    Checking signature v2.2.0
   Compiling alloy-rlp-derive v0.3.11
    Checking sha2 v0.10.8
   Compiling tracing-attributes v0.1.28
   Compiling tokio-macros v2.2.0
   Compiling futures-macro v0.3.30
   Compiling thiserror-impl v2.0.11
    Checking elliptic-curve v0.13.8
    Checking ecdsa v0.16.9
    Checking tracing v0.1.41
    Checking k256 v0.13.4
    Checking futures-util v0.3.30
    Checking derive_more v1.0.0
   Compiling zerocopy-derive v0.7.35
   Compiling auto_impl v1.2.1
   Compiling pin-project-internal v1.1.8
    Checking zerocopy v0.7.35
    Checking ppv-lite86 v0.2.20
    Checking pin-project v1.1.8
   Compiling openssl-macros v0.1.1
    Checking rand_chacha v0.3.1
    Checking rustls-webpki v0.102.8
    Checking rand v0.8.5
    Checking bytes v1.6.0
    Checking smallvec v1.13.2
    Checking arrayvec v0.7.6
    Checking const-hex v1.14.0
    Checking alloy-rlp v0.3.11
    Checking ruint v1.12.3
   Compiling alloy-sol-type-parser v0.8.19
    Checking alloy-primitives v0.8.19
    Checking parking_lot v0.12.3
    Checking tokio v1.37.0
    Checking http v1.2.0
    Checking alloy-eip7702 v0.5.0
    Checking alloy-eip2930 v0.1.0
    Checking alloy-serde v0.9.2
   Compiling alloy-json-abi v0.8.19
    Checking nybbles v0.3.4
    Checking http-body v1.0.1
    Checking tower v0.5.2
    Checking alloy-eips v0.9.2
    Checking alloy-trie v0.7.8
    Checking futures-executor v0.3.30
   Compiling alloy-sol-macro-input v0.8.19
   Compiling thiserror-impl v1.0.69
    Checking futures v0.3.30
    Checking http-body-util v0.1.2
    Checking alloy-consensus v0.9.2
    Checking sha1 v0.10.6
   Compiling alloy-sol-macro-expander v0.8.19
    Checking serde_urlencoded v0.7.1
   Compiling async-trait v0.1.85
   Compiling toml_datetime v0.6.8
   Compiling serde_spanned v0.6.8
   Compiling num_enum_derive v0.7.3
    Checking tungstenite v0.24.0
    Checking alloy-signer v0.9.2
    Checking alloy-consensus-any v0.9.2
    Checking alloy-network-primitives v0.9.2
   Compiling strum_macros v0.26.4
   Compiling toml_edit v0.19.15
    Checking num_enum v0.7.3
    Checking num-integer v0.1.46
   Compiling async-stream-impl v0.3.6
   Compiling bigdecimal v0.4.7
    Checking utf8parse v0.2.1
    Checking tower v0.4.13
    Checking tokio-util v0.7.13
    Checking hyper v1.5.2
    Checking tokio-stream v0.1.17
    Checking tokio-native-tls v0.3.1
   Compiling alloy-sol-macro v0.8.19
    Checking tokio-rustls v0.26.1
    Checking interprocess v2.2.2
    Checking tokio-tungstenite v0.24.0
    Checking hyper-util v0.1.7
    Checking alloy-sol-types v0.8.19
    Checking strum v0.26.3
   Compiling pq-sys v0.4.8
   Compiling syn v1.0.109
    Checking hashbrown v0.13.2
    Checking hashbrown v0.14.5
    Checking hyper-tls v0.6.0
    Checking schnellru v0.2.4
    Checking reqwest v0.12.5
    Checking dashmap v6.1.0
   Compiling toml v0.7.8
    Checking alloy-chains v0.1.57
    Checking anstyle-parse v0.2.3
    Checking async-stream v0.3.6
    Checking num-bigint v0.4.6
    Checking lru v0.12.5
   Compiling diesel_table_macro_syntax v0.1.0
    Checking colorchoice v1.0.0
    Checking anstyle v1.0.10
    Checking anstyle-query v1.0.2
   Compiling diesel_derives v2.1.4
    Checking anstream v0.6.13
   Compiling migrations_internals v2.1.0
    Checking clap_lex v0.7.4
    Checking lazy_static v1.4.0
    Checking strsim v0.11.1
    Checking clap_builder v4.5.27
    Checking colored v2.1.0
   Compiling migrations_macros v2.1.0
   Compiling clap_derive v4.5.24
    Checking simple_logger v5.0.0
    Checking clap v4.5.27
    Checking diesel v2.1.6
   Compiling field_count_derive v0.1.1
    Checking field_count v0.1.1
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.6/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking alloy-json-rpc v0.9.2
    Checking alloy-rpc-types-eth v0.9.2
    Checking alloy-dyn-abi v0.8.19
    Checking alloy-transport v0.9.2
    Checking alloy-core v0.8.19
    Checking alloy-pubsub v0.9.2
    Checking alloy-transport-http v0.9.2
    Checking alloy-transport-ipc v0.9.2
    Checking alloy-transport-ws v0.9.2
    Checking alloy-rpc-client v0.9.2
    Checking alloy-rpc-types-any v0.9.2
    Checking alloy-rpc-types v0.9.2
    Checking alloy-network v0.9.2
    Checking alloy-provider v0.9.2
    Checking alloy-signer-local v0.9.2
    Checking alloy-contract v0.9.2
    Checking alloy v0.9.2
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
